--- a/index.css
+++ b/index.css
@@ -1,6 +1,20 @@
 body {
   background-color: peru;
 }
+
 h1 {
   color: white;
+}
+
+h2 {
+  color: #ecf0f1;
+  transition: color .5s ease-in-out;
+}
+
+.mouseOver {
+  color: #2980b9
+}
+
+.title_title1 {
+  cursor: pointer;
 }
