--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #ecf0f1;
+  background-color: #2c3e50;
 }
 
 h1 {
@@ -16,15 +16,36 @@ h1 {
   display: block;
 }
 
-/* h2 {
-  color: #ecf0f1;
+h2 {
+  color: #02121a;
   transition: color .5s ease-in-out;
-} */
+}
 
-/* .mouseOver {
+.mouseOver {
   color: #2980b9
 }
 
 .title_title1 {
   cursor: pointer;
-} */
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.bgImage{
+  position: absolute;
+  top:0;
+  left:0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  animation: fadeIn 1.5s linear;
+}
+
+
