--- a/index.css
+++ b/index.css
@@ -1,11 +1,71 @@
 body {
   background-color: #2c3e50;
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.js-momentum {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
 }
 
 h1 {
-  color: #34495e;
+  margin: 0;
 }
 
+.js-greetings {
+  margin: 0 0 80px 0;
+  font-size: 1.5em;
+}
+
+.js-clock {
+  font-size: 2em;
+}
+
+.js-toDoForm {
+}
+
+input {
+  background-color: transparent;
+  padding: 5px 10px;
+  border: 2px solid;
+  color: white;
+  border-radius: 3px;
+}
+::placeholder {
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+
+.js-toDoList {
+  list-style-type: none;
+  padding: 0;
+  font-size: 1.3em;
+}
+
+button {
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+  margin-top: 15px;
+}
+
+.js-weather {
+  display: block;
+  text-align: right;
+}
+
+.weather-span1, .weather-span2 {
+  display: block;
+}
+
+.weather-span1{
+  font-size: 2em;
+}
 
 .form,
 .greetings {
