--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 body {
   background-color: #2c3e50;
   color: white;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Nanum Gothic', sans-serif;
 }
 
 .js-momentum {
@@ -111,6 +111,10 @@ h2 {
   height: 100%;
   z-index: -1;
   animation: fadeIn 1.5s linear;
+}
+
+.greeting_btn {
+  color: rgb(245, 94, 94);
 }
 
 
