--- a/index.css
+++ b/index.css
@@ -85,7 +85,8 @@ button {
 }
 
 .form,
-.greetings {
+.greetings,
+.greeting {
   display: none;
 }
 
@@ -139,6 +140,32 @@ button {
 .greet {
   cursor: pointer;
 }
+.delBtn_todo {
+  margin-left: 20px;
+}
+.container {
 
+}
 
+.checkbox {
+  -webkit-appearance: none;
+  border: 1px solid #cacece;
+  box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px -15px 10px -12px rgba(0,0,0,0.05);
+  padding: 9px;
+  border-radius: 3px;
+  display: inline-block;
+  position: relative;
+  margin-right: 20px;
+  margin-top: 20px;
+
+}
+.checkbox:checked {
+  background-color: #e9ecee;
+  border: 1px solid #adb8c0;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05), inset 0px -15px 10px -12px rgba(0, 0, 0, 0.05), inset 15px 10px -12px rgba(255, 255, 255, 0.1);
+  color: #99a1a7;
+}
+.checkbox:checked ~ span{
+  text-decoration-line: line-through;
+}
 
